--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no, minimal-ui">
+
 <div id="x">0</div>
 <div id="y">0</div>
 <div id="z">0</div>
