--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+
+<!DOCTYPE html>
+<html>
+<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no, minimal-ui">
-
+</head>
+<body>
 <div id="x">0</div>
 <div id="y">0</div>
 <div id="z">0</div>
@@ -20,3 +25,4 @@ b.addEventListener("click", () => {
 	});
 });
 </script>
+</body>
