--- a/1.html
+++ b/1.html
@@ -1,3 +1,8 @@
+<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no, minimal-ui">
+</head>
+
 support DeviceOrientationEvent<br>
 <input id="input_04_support" style="margin-bottom:25px;"><br>
 alpha<br>
