--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no, minimal-ui">
 </head>
 <body>
-<a href="1.html">1</a><br />
-<a href="2.html">2</a><br />
+<a href="1.html">1</a><br /><br />
+<a href="2.html">2</a><br /><br />
+<a href="3.html">2</a><br /><br />
 </body>
