--- a/5.html
+++ b/5.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     
-    <button onclick="set_head_gn">reset</button>
+    <button onclick="set_head_gn()">reset</button>
     
     <script type="text/javascript">
     var gn;
@@ -111,6 +111,7 @@
     }
 
     function start_gn() {
+    alert("O")
       gn.start(gnCallBack);
     }
 
