--- a/public/index.html
+++ b/public/index.html
@@ -11,4 +11,6 @@
 <a href="3.html">3</a><br /><br />
 <a href="4.html">4</a><br /><br />
 <a href="5.html">5</a><br /><br />
+<a href="6.html">6</a><br /><br />
+<a href="7.html">7</a><br /><br />
 </body>
