--- a/public/7.html
+++ b/public/7.html
@@ -10,7 +10,7 @@
 </head>
 <body style="margin: 0; background: #000; overflow: hidden; color: #000;">
 	<div style="position: absolute; z-index: 1; font-size: 2vw;">
-		var 10
+		ver.20200821
 		<div id="al">-</div>
 		<div id="be">-</div>
 		<div id="ga">-</div>
